update fonts, html et css

--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
-  "name": "breco_cda",
+  "name": "breco_ccp2cp8",
   "version": "1.0.0",
-  "description": "This project is a virtual learn project.",
-  "main": "index.html",
-  "directories": {
-    "test": "tests"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"npm run php\" \"npm run bs\"",
-    "php": "php -S localhost:3000 -t .",
-    "bs": "browser-sync start --config bs-config.js",
-    "start": "npm run dev"
+  "description": "Pour l'installation générale, voir le fichier \"./how-to.md\"",
+  "keywords": [],
+  "homepage": "https://github.com/djro-fr/Breco_CCP2CP8#readme",
+  "bugs": {
+    "url": "https://github.com/djro-fr/Breco_CCP2CP8/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/djro-fr/Breco_CCP1CP3.git"
+    "url": "git+https://github.com/djro-fr/Breco_CCP2CP8.git"
   },
-  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/djro-fr/Breco_CCP1CP3/issues"
+  "author": "Sylvain GIRAULT",
+  "type": "commonjs",
+  "main": "bs-config.js",
+  "directories": {
+    "test": "tests"
   },
-  "homepage": "https://github.com/djro-fr/Breco_CCP1CP3#readme",
+    "scripts": {
+        "dev": "concurrently \"npm run php\" \"npm run bs\"",
+        "php": "php -S localhost:3000 -t .",
+        "bs": "browser-sync start --config bs-config.js",
+        "start": "npm run dev"
+    },
   "devDependencies": {
     "browser-sync": "^3.0.4",
     "concurrently": "^9.2.0"
   }
 }
+
